--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,72 +1,70 @@
 ---
+  Articles
+---
+  
+@article{Schroer2021,
+bibtex_show={true},
+author = {Schroer, K. and Ketter, W. and Lee, T.Y. and Gupta, A. and Kahlen, M.T.},
+journal = {Transportation Science, Forthcoming (Available at SSRN),},
+abbr={TRSC},
+institution = {SSRN},
+keywords = {car2go,machine learning,online optimization,optimal positioning,sharing economy},
+title = {Data-driven competitor-aware positioning in on-demand vehicle rental networks},
+html = {https://ssrn.com/abstract=3915466},
+year = {2021}
+}
+
+@article{Herreros2015,
+bibtex_show={true},
+author = {Herreros, J.M. and Schroer, K. and Sukjit, E. and Tsolakis, A.},
+doi = {10.1016/j.apenergy.2015.02.075},
+issn = {03062619},
+journal = {Applied Energy,},
+abbr={Appl.Energy},
+number = {x},
+pages = {335--343},
+publisher = {Elsevier Ltd},
+title = {Extending the environmental benefits of ethanol–diesel blends through DGE incorporation},
+html = {http://linkinghub.elsevier.com/retrieve/pii/S0306261915002603},
+volume = {146},
+year = {2015}
+}
+
+---
+  Conferences
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@inproceedings{Schroer2019a,
+author = {Schroer, Karsten and Kahlen, Micha and Ketter, Wolfgang and Lee, Thomas Y and Gupta, Alok},
+abbr={CIST},
+booktitle = {INFORMS Conference on Information Systems and Technology (Seattle),},
+pages = {1--24},
+title = {Fleet Wars -- Leveraging Big Urban Data for Competitor- Aware Predictive Analytics in Free-Floating Shared Mobility Systems},
+year = {2019}
 }
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@inproceedings{Schroer2019b,
+author = {Schroer, Karsten and Ketter, Wolfgang and Lee, Thomas Y and Gupta, Alok and Kahlen, Micha},
+abbr={WITS},
+booktitle = {Workshop on Information Systems and Technology 2019 (Munich),},
+pages = {1--15},
+title = {Optimal management of free-floating vehicle sharing systems under competition},
+year = {2019}
 }
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
+@inproceedings{Schroer2020,
+author = {Schroer, Karsten and Pohl, Maurice and Ketter, Wolfgang and Pohl, Maurice},
+abbr={ICIS},
+booktitle = {International Conference on Information Systems 2020 (India),},
+pages = {1--17},
+html = {https://aisel.aisnet.org/icis2020/societal_impact/societal_impact/9/},
+title = {To Substitute or to Supplement? - Investigating the Heterogeneous Effects of Electric Scooter Platform Introduction on Micromobility},
+year = {2020}
 }
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{Schroer2019,
+author = {Schroer, Karsten and Ketter, Wolfgang and Lee, Thomas Y and Gupta, Alok and Kahlen, Micha},
+abbr={SIGGreen},
+booktitle = {Proceedings of the SIG GREEN Workshop,},
+pages = {1--12},
+title = {An Online Learning and Optimization Approach for Competitor-Aware Management of Shared Mobility Systems},
+html = {https://aisel.aisnet.org/sprouts{\_}proceedings{\_}siggreen{\_}2019},
+year = {2019}
 }
